fixed spacing on k

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,10 @@ h2{
     font-weight: bold;
     font-size: 18pt;
     letter-spacing: 20px;
-    margin-right: -20px; /*removes spacing from last letter*/
+}
+
+.k{
+    letter-spacing: 0px;
 }
 
 .technologies{
